--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="style.css">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Автосервис 999 — Курск</title>
+  <title>Автосервис 777 — Курск</title>
   <meta name="description" content="Профессиональный автосервис в Курске: диагностика, ремонт, ТО, кузовные работы." />
   <style>
     :root{
@@ -76,7 +76,7 @@
         <div class="logo">
           <div class="mark">AS</div>
           <div>
-            <div style="font-weight:800">Автосервис 999</div>
+            <div style="font-weight:800">Автосервис 777</div>
             <div style="font-size:12px;opacity:0.9">Качественно. Быстро. Надёжно.</div>
           </div>
         </div>
@@ -138,7 +138,7 @@
           <h3 style="margin:0 0 10px">Контактная информация</h3>
           <div class="meta">
             <div><strong>Адрес</strong><small id="address">г. Курск, ул. Клыкова, 20Б</small></div>
-            <div><strong>Телефон</strong><small><a href="tel:+79204020458">+7 920 402 0458</a></small></div>
+            <div><strong>Телефон</strong><small><a href="tel:+79606877770">+7 960 687-77-70</a></small></div>
             <div><strong>Email</strong><small><a href="mailto:твояпочта@mail.ru">твояпочта@mail.ru</a></small></div>
           </div>
           <div style="margin-top:12px" class="contacts">
@@ -169,7 +169,7 @@
       </aside>
     </div>
 
-    <footer>© <span id="year"></span> Автосервис 999 — Все права защищены</footer>
+    <footer>© <span id="year"></span> Автосервис 777 — Все права защищены</footer>
   </main>
 
   <button class="btn-fab pulse" onclick="document.getElementById('contacts').scrollIntoView({behavior:'smooth'})">Записаться</button>
