--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container">
       <div class="top">
         <div class="logo">
-          <div class="mark">AS</div>
+          <div class="mark">777</div>
           <div>
             <div style="font-weight:800">Автосервис 777</div>
             <div style="font-size:12px;opacity:0.9">Качественно. Быстро. Надёжно.</div>
@@ -116,9 +116,7 @@
     <div class="grid">
       <section>
         <h2 class="section">Чем занимаемся</h2>
-        <div class="services" id="services">
-          <div class="service"><div style="font-weight:700">Диагностика</div><div style="font-size:13px;color:var(--muted)">Компьютерная, перед покупкой</div></div>
-          <div class="service"><div style="font-weight:700">Ремонт двигателя</div><div style="font-size:13px;color:var(--muted)">Капитальный ремонт, замена ГРМ</div></div>
+        <div class="services" id="services"
           <div class="service"><div style="font-weight:700">Техническое обслуживание</div><div style="font-size:13px;color:var(--muted)">Замена масел, фильтров, развал-схождение</div></div>
           <div class="service"><div style="font-weight:700">Кузовной ремонт</div><div style="font-size:13px;color:var(--muted)">Покраска, удаление вмятин, полировка</div></div>
         </div>
@@ -142,7 +140,7 @@
             <div><strong>Email</strong><small><a href="mailto:твояпочта@mail.ru">твояпочта@mail.ru</a></small></div>
           </div>
           <div style="margin-top:12px" class="contacts">
-            <a href="tel:+79204020458">Позвонить</a>
+            <a href="tel:+79606877770">Позвонить</a>
             <a href="mailto:твояпочта@mail.ru">Написать</a>
           </div>
         </div>
