--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="grid">
       <section>
         <h2 class="section">Чем занимаемся</h2>
-        <div class="services" id="services"
+        <div class="services" id="services">
           <div class="service"><div style="font-weight:700">Техническое обслуживание</div><div style="font-size:13px;color:var(--muted)">Замена масел, фильтров, развал-схождение</div></div>
           <div class="service"><div style="font-weight:700">Кузовной ремонт</div><div style="font-size:13px;color:var(--muted)">Покраска, удаление вмятин, полировка</div></div>
         </div>
